Fix issue with visibility of mobile sign out button

--- a/src/components/mobileSignOutBtn/mobileSignOutBtn.module.scss
+++ b/src/components/mobileSignOutBtn/mobileSignOutBtn.module.scss
@@ -10,6 +10,7 @@
   padding: 0;
   position: absolute;
   left: 0;
+  z-index: 5;
 }
 
 .signOutIcon {
